--- a/templates/ingresses/kong-ingress.yaml
+++ b/templates/ingresses/kong-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kong-admin-ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: kong
+    kubernetes.io/ingress.class: nginx
     # Permitem accesul cross-origin pentru ca Managerul să poată vorbi cu API-ul
     konghq.com: cors-plugin 
 spec:
