--- a/values.yaml
+++ b/values.yaml
@@ -119,7 +119,7 @@ images:
   #Command image
   command:
     repository: ion21/command-service
-    tag: "23.12.2025_185328"
+    tag: "27.12.2025.06.33.46"
     pullPolicy: IfNotPresent
 
   # Keycloak image
